# wasmtime-crash-repro

component/: Cargo.toml
component/src/: lib.rs
component/wit/: clocks.wit
host/: Cargo.toml
host/preview2_wit/: test.wit
host/src/: fake_wasi.rs  main.rs
