[package]
name = "test-component"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "lib"
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", tag = "wit-bindgen-0.6.0" }

[package.metadata.component.target]
path = "wit"

[package.metadata.component.dependencies]