[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = { version = "9.0.2", features = ["component-model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "io-std", "time"] }
async-trait = "0.1.68"
anyhow = "1.0.22"
tracing = "0.1.26"
